# memcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml.example  pyproject.toml
.claude/commands/: ingest.md  read.md  recent.md  search.md  setup.md
.github/workflows/: ci.yml
src/memcp/: __init__.py  cli.py  config.py
src/memcp/ingest/: pipeline.py  sources.py
src/memcp/ingest/parsers/: base.py  claude.py
src/memcp/mcp/: server.py
src/memcp/search/: fts.py
src/memcp/storage/: db.py  models.py  repository.py
tests/: test_cli.py  test_mcp_tools.py  test_parser_claude.py  test_search.py  test_storage.py
